--- a/PrincingOptimisation/.classpath
+++ b/PrincingOptimisation/.classpath
@@ -2,5 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre1.8.0_31"/>
+	<classpathentry kind="lib" path="C:/Users/Simon/Documents/ulaval/2015_hiver/IFT_7020/choco-3.3.0/choco-solver-3.3.0-with-dependencies.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
